[project]
name = "audio_signal"
version = "0.1.0"
description = "A modern Python library for audio signal processing, built on PyTorch and torchaudio."
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=1.9.0",
  "torchaudio>=0.9.0",
  "numpy>=1.19.0",
  "ipython"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "mkdocs-material",
  "mkdocstrings[python]"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,.venv
